tests/rosetta/transpiler/C/15-puzzle-solver.c
// Generated by Mochi 0.10.32 on 2025-07-22 20:29 +0700
#include <stdio.h>
#include <string.h>

int main(void) {
    printf("%d\n", testpkg.FifteenPuzzleExample);
    return 0;
}
